--- a/ss02/baitap/create.html
+++ b/ss02/baitap/create.html
@@ -24,5 +24,5 @@
     <label for=""> Organic </label>
     <input name="organic" type="checkbox" checked="true" />
   </div>
-  <button>🥭🥭BOOM! Add fruit🥦🥦</button>
+  <button type="submit">🥭🥭BOOM! Add fruit🥦🥦</button>
 </form>
