--- a/ss02/baitap/overview.html
+++ b/ss02/baitap/overview.html
@@ -78,6 +78,7 @@
         /* transform: skewX(-20deg); */
         display: flex;
         transition: all 0.5s;
+        margin-top: 50px;
       }
 
       .card__emoji {
