--- a/ss02/baitap/product.html
+++ b/ss02/baitap/product.html
@@ -271,8 +271,8 @@
 
       <figure class="product">
         <div class="product__organic"><h5>{{organic}}</h5></div>
-        <a href="#" class="product__back">
-          <span class="emoji-left">👈</span>Back
+        <a href="/delete/{{id}}" class="product__back">
+          <span class="emoji-left">🚫 </span>Delete
         </a>
         <div class="product__hero">
           <span class="product__emoji product__emoji--1">{{image}}</span>
@@ -293,9 +293,9 @@
           <p><span class="emoji-left">🏷</span> {{price}}€</p>
         </div>
 
-        <a href="#" class="product__link">
+        <a href="/update/{{id}}" class="product__link">
           <span class="emoji-left">🛒</span>
-          <span>Add to shopping card ({{price}}€)</span>
+          <span>Update this fruit</span>
         </a>
 
         <p class="product__description">{{description}}</p>
